# stylegan2-ada-pytorch

./: .gitignore  Dockerfile  Network_Blending_ADA_PT.ipynb  Pipfile  README.md  SG2-ADA-PT_AudioReactive+Pitch.ipynb  SG2_ADA_PT_to_Rosinality.ipynb  SG2_ADA_PyTorch.ipynb  StyleCLIP_playground.ipynb  apply_factor.py  blend_models.py  calc_metrics.py  closed_form_factorization.py  combine_npz.py  config.yaml  conversion.py  custom.py  dataset_tool.py  docker_run.sh  evaluate.py  evaluate_part_segmentation.yaml  evaluate_region_proposal.yaml  evaluate_region_proposal_all_1300.yaml  evaluate_region_proposal_all_1500.yaml  evaluate_region_proposal_all_2000.yaml  evaluate_region_proposal_all_3000.yaml  evaluate_region_proposal_all_4000.yaml  evaluate_region_proposal_all_5000.yaml  evaluate_segmentation.yaml  evaluate_whole_system.yaml  export_weights.py  fewshot.py  flesh_digression.py  ganyu-face-training-with-stylegan2-ada.ipynb  ganyu_face_training_with_stylegan2_ada.ipynb  generate.py  legacy.py  part_segmentation.ipynb  pbaylies_projector.py  plot_graphs.ipynb  (+8 more)
.github/: FUNDING.yml
.ipynb_checkpoints/: part_segmentation-checkpoint.ipynb  plot_graphs-checkpoint.ipynb
classifier/: classifier.py
dnnlib/: __init__.py
docs/: dataset-tool-help.txt  generate-help.txt  license.html  style_mixing-help.txt  train-help.txt
metrics/: __init__.py  frechet_inception_distance.py  inception_score.py  kernel_inception_distance.py  metric_main.py  metric_utils.py  perceptual_path_length.py  precision_recall.py
part_segmentation/: fewshot.py  part_segmentor.py
svm/: svm.py
(+47 files in other folders)
