[metadata]
name = stylegan2-ada-pytorch
version = 1.0.0
description =  StyleGAN2-ADA - Official PyTorch implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NVlabs/stylegan2-ada-pytorch
project_urls =
    Bug Tracker = https://github.com/NVlabs/stylegan2-ada-pytorch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    torch >=1.7.0
    click
    requests
    tqdm
    pyspng
    ninja
    imageio-ffmpeg ==0.4.3

[options.packages.find]
where = .
